<resources>
    <string name="app_name">ComfortZone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">ই-মেইল</string>
    <string name="password">পাসওয়ার্ড</string>
    <string name="do_login">লগইন করুন</string>
    <string name="sign_up_with_email">ইমেইলের মাধ্যমে</string>
    <string name="sign_up_with_facebook">ফেসবুকের মাধ্যমে</string>
    <string name="sign_up_with_phone_number">মোবাইল নম্বরের মাধ্যমে</string>
    <string name="facebook_app_id">752543968619271</string>
    <string name="fb_login_protocol_scheme">fb752543968619271</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="slider_image">sliderImage</string>
    <string name="logo">Logo</string>
    <string name="comfort_zone">Comfort Zone</string>
    <string name="mobile_no">মোবাইল নম্বর</string>
    <string name="dummy_number">01XXXXXXXXX</string>
    <string name="please_confirm">নিশ্চিত করুন</string>
    <string name="code">কোড</string>
    <string name="code_prompt">৬-ডিজিটের কোড</string>
    <string name="do_sign_up">সাইন আপ করুন</string>
    <string name="do_confirm_password">কনফার্ম করুন পাসওয়ার্ড</string>
    <string name="not_have_an_account">অ্যাকাউন্ট নেই? তৈরি করুন\ </string>
    <string name="here">এখানে</string>
    <string name="home">হোম</string>
    <string name="cart">বাজারের ঝুড়ি</string>
    <string name="notifications">বিজ্ঞপ্তি</string>
    <string name="open_nav">"Open nav drawer"</string>
    <string name="close_nav">"Close nav drawer"</string>
    <string name="product">product</string>
    <string name="add_to_cart">add_to_cart</string>
    <string name="checkout">অর্ডার করুন</string>
    <string name="total">Total: </string>
    <string name="bdt_icon">৳</string>
    <string name="product_price">Product price</string>
    <string name="product_name">Product name</string>
    <string name="product_image">Product Image</string>
    <string name="_10">10</string>
    <string name="total_price">Total Price</string>
    <string name="login_chooser">লগইন করুন</string>
    <string name="order_by_photo">ছবি তুলে অর্ডার করুন</string>
    <string name="product_category">Product category</string>
    <string name="log_out">লগ আউট</string>
    <string name="category">ক্যাটাগরিসমূহ</string>
    <string name="hot_products">জনপ্রিয় পণ্যসমূহ</string>
    <string name="photo_order">Photo Order</string>
    <string name="_0">0</string>
    <string name="put_in_your_basket">আপনার ঝুড়িতে রাখুন</string>
    <string name="contact_us">যোগাযোগ করুন</string>
    <string name="give_opinion">মতামত দিন</string>
    <string name="confirmation_text">আপনার অর্ডারটি জমা হয়েছে। অনুগ্রহপূর্বক ডেলিভারির জন্য অপেক্ষা করুন...</string>
    <string name="dev_info">ডেভলপার ইনফো</string>
    <string name="dev_description">This software is developed by YAS(Yet Another Startup). We are a group of enthusiasts  helping start-ups kick-start their business with development support and the power of latest technology. We are open to comments and ideas, reach us out if you have anything to share about your project, idea or anything else!</string>
    <string name="developer_logo">Developer Logo</string>
</resources>