<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_drawer"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/cart_drawer"
            android:icon="@drawable/ic_bag"
            android:title="@string/cart" />
        <item
            android:id="@+id/notification_drawer"
            android:icon="@drawable/ic_bell"
            android:title="@string/home" />
        <item android:id="@+id/picture_order"
            android:icon="@drawable/ic_bell"
            android:title="@string/order_by_photo"/>
        <item
            android:id="@+id/sign_in_drawer"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/sign_out_drawer"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    </group>
</menu>